fixed spanish how to start alignment

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -266,35 +266,35 @@ a:hover {
 			font-size: 2.5em;
 			font-weight: lighter;
 			margin: 0 auto;
-			padding-top: 7px;
+			padding-top: 9px;
 			text-shadow: 0px 1px 1px #000000;
-			width: 215px;
+			width: 230px;
 		}
 		.heading {
-			height: 68px;
+			height: 75px;
 			margin: 0 auto;
-			width: 245px;
+			width: 265px;
 		}
 		.wis {
 			background: url(/assets/title-wis.png) no-repeat;
-			-moz-background-size: 245px auto;
-			-webkit-background-size: 245px auto;
-			-o-background-size: 245px auto;
-			background-size: 245px auto;
+			-moz-background-size: 265px auto;
+			-webkit-background-size: 265px auto;
+			-o-background-size: 265px auto;
+			background-size: 265px auto;
 		}
 		.qrc {
 			background: url(/assets/title-qrc.png) no-repeat;
-			-moz-background-size: 245px auto;
-			-webkit-background-size: 245px auto;
-			-o-background-size: 245px auto;
-			background-size: 245px auto;
+			-moz-background-size: 265px auto;
+			-webkit-background-size: 265px auto;
+			-o-background-size: 265px auto;
+			background-size: 265px auto;
 		}
 		.hts {
 			background: url(/assets/title-hts.png) no-repeat;
-			-moz-background-size: 245px auto;
-			-webkit-background-size: 245px auto;
-			-o-background-size: 245px auto;
-			background-size: 245px auto;
+			-moz-background-size: 265px auto;
+			-webkit-background-size: 265px auto;
+			-o-background-size: 265px auto;
+			background-size: 265px auto;
 		}
 	}
 	.request { margin: 0; }
